; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/mediatek/extr_mtk_gpio_v1.c_mtk_gpio_pic_map_gpio.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/mediatek/extr_mtk_gpio_v1.c_mtk_gpio_pic_map_gpio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtk_gpio_softc = type { i64, i32 }
%struct.intr_map_data_gpio = type { i64, i32 }

@.str = private unnamed_addr constant [29 x i8] c"Invalid interrupt number %u\0A\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mtk_gpio_softc*, %struct.intr_map_data_gpio*, i64*, i32*)* @mtk_gpio_pic_map_gpio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtk_gpio_pic_map_gpio(%struct.mtk_gpio_softc* %0, %struct.intr_map_data_gpio* %1, i64* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.mtk_gpio_softc*, align 8
  %7 = alloca %struct.intr_map_data_gpio*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i64, align 8
  store %struct.mtk_gpio_softc* %0, %struct.mtk_gpio_softc** %6, align 8
  store %struct.intr_map_data_gpio* %1, %struct.intr_map_data_gpio** %7, align 8
  store i64* %2, i64** %8, align 8
  store i32* %3, i32** %9, align 8
  %11 = load %struct.intr_map_data_gpio*, %struct.intr_map_data_gpio** %7, align 8
  %12 = getelementptr inbounds %struct.intr_map_data_gpio, %struct.intr_map_data_gpio* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %10, align 8
  %14 = load i64, i64* %10, align 8
  %15 = load %struct.mtk_gpio_softc*, %struct.mtk_gpio_softc** %6, align 8
  %16 = getelementptr inbounds %struct.mtk_gpio_softc, %struct.mtk_gpio_softc* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp sge i64 %14, %17
  br i1 %18, label %19, label %26

19:                                               ; preds = %4
  %20 = load %struct.mtk_gpio_softc*, %struct.mtk_gpio_softc** %6, align 8
  %21 = getelementptr inbounds %struct.mtk_gpio_softc, %struct.mtk_gpio_softc* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = load i64, i64* %10, align 8
  %24 = call i32 @device_printf(i32 %22, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i64 %23)
  %25 = load i32, i32* @EINVAL, align 4
  store i32 %25, i32* %5, align 4
  br label %37

26:                                               ; preds = %4
  %27 = load i64, i64* %10, align 8
  %28 = load i64*, i64** %8, align 8
  store i64 %27, i64* %28, align 8
  %29 = load i32*, i32** %9, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %31, label %36

31:                                               ; preds = %26
  %32 = load %struct.intr_map_data_gpio*, %struct.intr_map_data_gpio** %7, align 8
  %33 = getelementptr inbounds %struct.intr_map_data_gpio, %struct.intr_map_data_gpio* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 8
  %35 = load i32*, i32** %9, align 8
  store i32 %34, i32* %35, align 4
  br label %36

36:                                               ; preds = %31, %26
  store i32 0, i32* %5, align 4
  br label %37

37:                                               ; preds = %36, %19
  %38 = load i32, i32* %5, align 4
  ret i32 %38
}

declare dso_local i32 @device_printf(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
